# CMake_Learning_Notes

./: README.md
Note_1/hello-world/: CMakeLists.txt  hello_world.cpp
Note_10/: CMakeLists.txt  cal_add.h  cal_substract.cpp  cal_substract.h  main.cpp  message.cpp  message.h
Note_11/01/: CMakeLists.txt
Note_11/02/: CMakeLists.txt  hello_os.cpp
Note_11/03/: CMakeLists.txt  arch_dependent.cpp
Note_12/: CMakeLists.txt  linear_algebra.cpp
Note_13/01/: CMakeLists.txt
Note_13/02/: CMakeLists.txt  hello_embedded_python.c
Note_14/: CMakeLists.txt  py3_pure_embedding.cpp  use_numpy.py
Note_15/: CMakeLists.txt  test_no_openmp.cpp  test_openmp.cpp
Note_16/: CMakeLists.txt  zmq_client.cpp  zmq_server.cpp
Note_17/: CMakeLists.txt  FindZeroMQ.cmake
Note_18/: CMakeLists.txt  main.cpp  sum_integers.cpp  test.cpp  test.py  test.sh
Note_19/: CMakeLists.txt  sum_integers.h
Note_2/hello-world/: CMakeLists.txt  hello_world.cpp
Note_2/hello-world/include/: message.h
Note_2/hello-world/src/: message.cpp
Note_2/message_01/: CMakeLists.txt
Note_2/message_dynamic_lib/: CMakeLists.txt
Note_2/message_dynamic_lib/message_module/: CMakeLists.txt
Note_2/message_dynamic_lib_third_party/: CMakeLists.txt
Note_2/message_shared_lib_in_windows/: CMakeLists.txt  hello_world.cpp
Note_2/message_shared_lib_in_windows/message-module/: CMakeLists.txt
Note_2/message_shared_lib_in_windows/message-module/include/: message.h
Note_2/message_shared_lib_in_windows/message-module/src/: message.cpp
Note_2/message_shared_lib_third_party_in_windows/: CMakeLists.txt
Note_2/message_static_lib/: hello_world.cpp
Note_2/message_static_lib/message_module/: CMakeLists.txt
Note_2/message_static_lib/message_module/include/: message.h
Note_2/message_static_lib/message_module/src/: message.cpp
Note_2/message_third_party/: CMakeLists.txt
Note_20/: CMakeLists.txt  test.cpp
Note_3/message_module_lib_standard/: CMakeLists.txt
Note_3/message_module_lib_standard/message_module/: CMakeLists.txt
Note_3/message_module_lib_standard/message_module/include/: message.h  message_export_lib.h
Note_3/message_module_lib_standard/message_module/src/: message.cpp
Note_5/message_module_lib_standard/: CMakeLists.txt  hello_world.cpp
Note_5/message_module_lib_standard/cmake/: message_config.cmake  message_config.cmake.in  message_config_version.cmake
Note_5/message_module_lib_standard/message_module/: CMakeLists.txt
Note_5/message_module_lib_standard/message_module/include/: message.h  message_export_lib.h
